# cogenitor

./: Cargo.toml  README.md  TODO.md
cogenitor/: Cargo.toml
cogenitor-core/: Cargo.toml
cogenitor-core/src/: codemodel.rs  codewriter.rs  lib.rs  oasprobe.rs  test.rs  translate.rs  types.rs
cogenitor-core/src/adapters/: mod.rs  oas30.rs  oas31.rs  util.rs
cogenitor-core/src/adapters/oas30/: components.rs  obj.rs  operation.rs  parameter.rs  path_item.rs  request_body.rs  schema.rs  spec.rs  test.rs
cogenitor-core/src/codemodel/: fqtn.rs  function.rs  implementation.rs  simplepath.rs  trait_.rs
cogenitor-macro/: Cargo.toml
cogenitor-macro/src/: lib.rs  procmacro.rs
cogenitor-model/: Cargo.toml
cogenitor-model/src/: client_adapter.rs  lib.rs
cogenitor-test/: Cargo.toml  build.rs
cogenitor-test/src/: lib.rs  main.rs  petstore_file.rs  petstore_macro.rs
cogenitor/src/: lib.rs
doc/: conversion_rules.md
mirror-api-guru/: Cargo.toml
mirror-api-guru/src/: main.rs
src/: codemodel.rs  codewriter.rs  lib.rs  types.rs
src/adapters/: mod.rs  oas30.rs
src/codemodel/: fqtn.rs
src/test-data/: petstore.yaml
