[workspace]
resolver = "3"
members = [
    "cogenitor",
    "cogenitor-core",
    "cogenitor-macro",
    "cogenitor-model",
    "cogenitor-test",
]

[workspace.dependencies]
http = "1.3"
anyhow = {version = "1", features=["backtrace"]}
serde = {version="1.0", features =["derive"]}
log = "0.4"
test-log = { version = "0.2.18", features = ["color", "trace"] }
