[package]
name = "cogenitor-core"
version = "0.1.0"
edition = "2024"

[features]
default = ["oas30"]
oas30 = []
oas31 = []

[dependencies]
anyhow.workspace = true
http.workspace = true
log.workspace = true
indexmap = "2.11.1"
json = "0.12.4"
lazy_static = "1.5.0"
oas3 = "0.13.0"
openapiv3 = "2.0.0"
proc-macro2 = "1.0.95"
quote = "1.0.40"
regex = "1.11.1"
serde_json = "1.0"
serde_yaml = "0.9.34"
syn = "2.0.101"
thiserror = "2.0.12"
yaml-rust2 = "0.10.1"
rust-format = { version = "0.3.4", features = ["token_stream"] }

[dev-dependencies]
assert-tokenstreams-eq = "0.1.0"
test-log.workspace = true
